# firmware_RackIQ

./: .orale.txt.un~  README.md  orale.txt
firemware_rackiq_V3/: CMakeLists.txt
firemware_rackiq_V3/main/: CMakeLists.txt  global.h  main.c
firemware_rackiq_V3/main/modules/HTTP/: http_setup.c  http_setup.h
firemware_rackiq_V3/main/modules/HX711/: hx711_lib.c  hx711_lib.h
firemware_rackiq_V3/main/modules/MQTT/: mqtt_lib.c  mqtt_lib.h
firemware_rackiq_V3/main/modules/UART/: uart_lib.c  uart_lib.h
firemware_rackiq_V3/main/modules/WIFI/: wifi_lib.c  wifi_lib.h
firmware_esp_node_global/: CMakeLists.txt
firmware_esp_node_global/main/: CMakeLists.txt  global.h  main.c
firmware_esp_node_global/main/modules/HX711/: hx711_lib.c  hx711_lib.h
firmware_esp_node_global/main/modules/MQTT/: mqtt_lib.c  mqtt_lib.h
firmware_esp_node_global/main/modules/UART/: uart_lib.c  uart_lib.h
firmware_esp_node_global/main/modules/WIFI/: wifi_lib.c  wifi_lib.h
firmware_esp_node_global/main/modules/WIFI_AP/: wifi_ap_lib.h
firmware_esp_rackiq_V2/: CMakeLists.txt
firmware_esp_rackiq_V2/main/: CMakeLists.txt  global.h  idf_component.yml  main.c
firmware_esp_rackiq_V2/main/modules/HX711/: hx711.c
firmware_esp_rackiq_V2/main/modules/MQTT/: mqtt_lib.c  mqtt_lib.h
firmware_esp_rackiq_V2/main/modules/UART/: uart_lib.h
firmware_esp_rackiq_V2/main/modules/WIFI/: wifi_lib.c
