idf_component_register(
    SRCS 
        "main.c" 
        "modules/WIFI/wifi_lib.c" 
        "modules/UART/uart_lib.c" 
        "modules/HX711/hx711_lib.c"
        "modules/MQTT/mqtt_lib.c"
    INCLUDE_DIRS 
        "." 
        "modules/WIFI" 
        "modules/UART" 
        "modules/HX711"
        "modules/MQTT"
    REQUIRES 
        esp_wifi 
        wpa_supplicant    
        nvs_flash 
        esp_driver_uart    
        esp_driver_gpio    
        esp_event          
        lwip               
        mqtt
)